kubernetes/minikube/applications/ingress/nginx/patch.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: test2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
